[package]
name = "io-excel"
version = "0.1.0"
edition = "2021"
email = "yipen9@gmail.com"

description = "This is a package that wraps around Calamine and rust_xlsxwriter, allowing for simple Excel read and write operations through procedural macros."
license = "MIT"


[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }  
syn={version="1.0",features=["extra-traits"]}
quote="1.0"
proc-macro2={version="1.0"}
calamine = "0.26.1"
rust_xlsxwriter = "0.79.0"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }