[package]
name = "io-excel"
version = "0.1.4"
edition = "2021"
email = "yipen9@gmail.com"
repository = "https://github.com/yipen9/io-excel"

description = "This is a package that wraps around Calamine and rust_xlsxwriter, allowing for simple Excel read and write operations through procedural macros."
license = "MIT"


[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }  
calamine = "0.26.1"
rust_xlsxwriter = "0.79.0"
syn={version="1.0",features=["extra-traits"]}
quote="1.0"
proc-macro2={version="1.0"}


[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }